--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,15 +20,20 @@ tracing = "0.1.40"
 kube = { version = "0.78.0", default-features = false, features = ["runtime", "derive", "client", "openssl-tls"] }
 kube-client = "0.78.0"
 k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
-tokio = { version = "1.21.2", features = ["rt", "macros"] }
+tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
+url = "2.5.0"
 
 [[bin]]
 name = "n8w8-http-check"
 path = "src/http-check-bin.rs"
 
 [[bin]]
-name = "n8w8-simple-val"
-path = "src/simple-val-bin.rs"
+name="n8w8-k8s"
+path= "src/k8s.rs"
+
+[[bin]]
+name="n8w8-simple-val"
+path= "src/simple-val-bin.rs"
 
 [[bin]]
 name = "n8w8-k8s-check"
