--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,12 @@ thiserror = "1.0.57"
 clap={version="4.5.1", features=["derive"]}
 futures = "0.3.30"
 tracing = "0.1.40"
+url = "2.3.1"
+reqwest = { version = "0.11.16", features = ["blocking"] }
+protobuf-json-mapping = "3.3.0"
 
 [dev-dependencies]
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tokio-test = "0.4.2"
+test-log = "0.2.13"
+pretty_assertions = "1.3.0"
