--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nachtwacht-models"
-version = "0.2.0"
+version = "0.2.1-rc.1"
 edition = "2021"
 build= "build.rs"
 license = "GPLv3"
