--- a/openmetrics-server/Cargo.toml
+++ b/openmetrics-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "n8w8-openmetrics-server"
-version = "0.2.1-rc.1"
+version = "0.2.1"
 edition = "2021"
 license = "AGPLv3"
 description = "The metrics-server is only to provide some health data metrics to calling entities."
